# Agent2

./: .env.example  README.md  pyproject.toml
agent2/: README.md
scripts/: llm_benchmark.py  pipeline_benchmark.py  smoke.py  stream_pipeline_benchmark.py  stream_tts_benchmark.py  tts_benchmark.py
src/: agent.py
src/agent2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ui/: package.json  server.js
ui/views/: simulate.ejs
