[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent2"
version = "0.1.0"
# Limit to <3.13 so the resolver doesn't try to satisfy dependencies for 3.13
# (some plugins currently don't publish wheels for 3.13).
requires-python = ">=3.10,<3.13"
description = "Minimal, stable baseline for LiveKit agent with provider checks and TTS dry-run"

dependencies = [
  "python-dotenv>=1.0.1",
  "httpx>=0.27.2",
  "aiohttp>=3.9",
  "livekit-agents~=1.2",
  "livekit-plugins-groq~=1.2",
  "livekit-plugins-deepgram>=1.2.6",
  # Bump ElevenLabs plugin to a newer build that honors voice selection consistently
  "livekit-plugins-elevenlabs>=1.3.0",
  "livekit-plugins-turn-detector~=1.2",
  "livekit-plugins-silero~=1.2",
  "webrtcvad>=2.0.10",
]

[dependency-groups]
dev = [
  "ruff",
]

[tool.ruff]
line-length = 100
